Fix pop-up scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -522,7 +522,25 @@ footer {
   padding: 20px;
   width: 90%;
   height: 80%;
-  overflow: scroll;
+  overflow-y: scroll;
+}
+
+.modal-content::-webkit-scrollbar {
+  width: 10px;
+  background-color: var(--tertiary-color);
+}
+
+.modal-content::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-color);
+  border-radius: 5px;
+}
+
+.modal-content::-webkit-scrollbar-track {
+  background-color: var(--tertiary-color);
+}
+
+.modal-content::-webkit-scrollbar-thumb:hover {
+  background-color: var(--secondary-color);
 }
 
 .modal-image {
